crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_array_unindexed_argument.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected a rank-1 indexed collection, found Length
    Diagnostic severity: error
Begin snippet for extern_array_unindexed_argument.gcl starting at line 5, column 1

snippet line 5: 
snippet line 6: node bad: Dimensionless = demo.normalize(3.0 m);
    label at line 6, columns 42 to 46: has dimension Length
diagnostic help: parameter `xs` of `demo.normalize` takes one axis for each declared index variable
diagnostic code: graphcal::D001
