crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_dim_var_mismatch.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Length, found Time
    Diagnostic severity: error
Begin snippet for extern_dim_var_mismatch.gcl starting at line 4, column 1

snippet line 4: }
snippet line 5: node x: Length = demo::lerp(1.0 m, 2.0 s, 0.5);
    label at line 5, columns 36 to 40: has dimension Time
diagnostic help: parameter `b` must have the same dimension as `a`
diagnostic code: graphcal::D001
