crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_fn_failure_is_contained_per_node.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: message
---
extern function `demo::inverse` (plugin "graphcal:demo") failed: division by zero
