crates/graphcal-eval/tests/snapshots/error_snapshots__error_extern_unknown_dimension.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 782
expression: rendered
---
unknown dimension `Wobble`
    Diagnostic severity: error
Begin snippet for extern_unknown_dimension.gcl starting at line 2, column 1

snippet line 2: import plugin "graphcal:demo" as demo {
snippet line 3:     fn f(p: Wobble) -> Dimensionless;
    label at line 3, columns 13 to 18: unknown dimension
snippet line 4: }
diagnostic help: dimension must be declared or part of the prelude
diagnostic code: graphcal::D004
